--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,6 +4,10 @@
 }
 
 /* BODY */
+#navbarCelu {
+    display: none;
+}
+
 .negrita {
     font-weight:800;
 }
@@ -25,12 +29,13 @@ h1 {
     font-style:normal;
     font-weight:500;
     font-size: 30px;
-}
+    }
 
 h2 {
     font-style:normal;
     font-weight:300;
     font-size: 30px;
+    margin-bottom: 0;
 }
 
 .botones {
@@ -114,6 +119,7 @@ div a img {
     text-align: center;
     background-color: #F2BDC7;
     padding-top: 30px;
+    margin: 0;
 }
 
 .producto1 {
@@ -143,14 +149,14 @@ div a img {
 
 .textoManifiesto {
     grid-area: textomanifiesto;
-    padding: 20px;
+    padding: 10px;
     height:100%;
     width: 100%;
 }
 
 .textoManifiesto p{    
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     text-align: justify;   
 }
 
@@ -163,7 +169,7 @@ div a img {
 .rutinas {
     display:grid;
     grid-template-rows: 80%;
-    grid-template-columns: 45% 45%;
+    grid-template-columns: 35% 55%;
     grid-template-areas: 'fotoruti textorutina';
     justify-items: stretch;
     align-items: stretch;
@@ -171,20 +177,24 @@ div a img {
     align-content: center;
     background-color: #F2BDC7;
     width:100%;
-    height: 380px;
+    height: 100%;
 }
 
 .textoRutina {
     grid-area: textorutina;
+    height:100%;
+    width: 100%;
 }
 
 .imgRutina {
     grid-area: fotoruti;
+    width: 100%;
+    height:100%;
 }
 
 .textoRutina p {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     text-align: justify;
 }
 
@@ -208,24 +218,33 @@ form {
     display:grid;
     grid-template-columns: 90%;
     grid-template-rows: 45% 45%;
-    grid-template-areas: "texto"
-                        "video";
+    grid-template-areas: 'texto'
+                        'video';
     column-gap: 50px;
     justify-content: space-around;
     align-content:center;
     justify-items: center;
     align-items: center;
     width: 100%;
-    height:1000px;
+    height:100%;
 }
 
+.textoQuienes {
+    grid-area: texto;
+}
+
+.videoQuienes {
+    grid-area: video;
+    padding-top: 40px;
+}
 .textoQuienes h1 {
     text-align: center;
 }
 
 .textoQuienes p {
     text-align: justify;
-    padding: 30px;
+    padding: 20px;
+    padding-top: 20px;
 }
 
 .form {
@@ -247,7 +266,8 @@ form {
     justify-content: space-evenly;
     align-items: center;
     width:100%;
-    height:100px;
+    height:100%;
+    padding-top: 20px;
 }
 
 .fotosProductos {
@@ -461,7 +481,7 @@ footer {
     align-items: center;
     background-color:lavenderblush;
     color:black;
-    height:100px;
+    height:120px;
     width: 100%;
     padding-top:20px;
     padding-bottom:20px;
@@ -505,7 +525,36 @@ footer div ul li {
 
 
 @media screen and (max-width: 600px) {
-     /*seccion INDEX*/
+    #navbarCelu {
+        display:initial;
+    }
+    
+    header {
+        display:none;
+    }
+
+    #logoCel {
+        width: 100px;
+        height: 100px;
+    }
+
+    div nav ul {
+        display:flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: center;
+        align-items: center;
+        list-style-type: none;
+        width: 100%;
+        height:250px;
+        grid-area: "menu";
+    }    
+
+    .colorNavbar {
+        background-color: lavenderblush;
+    }
+
+    /*seccion INDEX*/
     .productos {
         width:100%;
         height:100%;
@@ -565,7 +614,7 @@ footer div ul li {
         padding-top: 10px;
         padding-bottom: 10px;
         text-align: justify;  
-        font-size: 10px;
+        font-size: 15px;
     }
     
     .imgManifiesto {
@@ -575,7 +624,7 @@ footer div ul li {
     }
 
     .textoManifiesto h2 {
-        font-size: 15px;
+        font-size: 20px;
         text-align: center;
     }
 
@@ -596,7 +645,7 @@ footer div ul li {
         align-content: center;
         background-color: #F2BDC7;
         width:100%;
-        height: 380px;
+        height: 100%;
     }
     
     .textoRutina {
@@ -611,11 +660,11 @@ footer div ul li {
         padding-top: 10px;
         padding-bottom: 10px;
         text-align: justify;  
-        font-size: 10px;
+        font-size: 15px;
     }
 
     .textoRutina h2 {
-        font-size: 15px;
+        font-size: 20px;
         text-align: center;
     }
 
@@ -697,39 +746,7 @@ footer div ul li {
     }
  
     
-    header {
-        display: grid;
-        grid-template-columns: 40% 30%;
-        grid-template-rows: 100%;
-        grid-template-areas: 'logo menu1';
-        justify-content: space-around;
-        background-color:lavenderblush;
-        width:100%;
-        height: 110px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-
-    div a img {
-        grid-area: logo;
-        width:100%;
-        height:100%;
-    }
-
-    div nav ul {
-        display: none;
-    }
-
-    .hamb {
-        grid-area: menu1;
-        display: block;
-    }
-
-    .hamb img {
-        width: 100%;
-        height: 100%;
-       
-    }
+    
 
     /*seccion PRODUCTOS*/
     .seccionProductos {
