--- a/css/estilo.css
+++ b/css/estilo.css
@@ -61,6 +61,8 @@ header {
 
 div nav ul li a:hover{
     background-color:pink;
+    color:black;
+    font-weight:bolder;
 }
 
 div nav ul {
@@ -94,8 +96,8 @@ div a img {
     height:40%;
 }
 
-.hamb {
-    display: none;
+.animate__animated .animate__fadeInUp {
+    overflow: scroll;
 }
 
 
@@ -144,7 +146,7 @@ div a img {
     justify-content: space-evenly;
     align-content: center;
     width:100%;
-    height: 100%;
+    height: 400px;
 }
 
 .textoManifiesto {
@@ -155,9 +157,23 @@ div a img {
 }
 
 .textoManifiesto p{    
-    padding-top: 20px;
-    padding-bottom: 20px;
-    text-align: justify;   
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align: justify;
+    font-size: 20px;   
+}
+
+.textoManifiesto a {
+    text-decoration: none;
+    color: black;
+    font-style: italic;
+    font-size: 20px;
+    padding: 0;
+}
+
+.textoManifiesto a:hover {
+    color:black;
+    font-weight:bolder;
 }
 
 .imgManifiesto {
@@ -177,7 +193,7 @@ div a img {
     align-content: center;
     background-color: #F2BDC7;
     width:100%;
-    height: 100%;
+    height: 340px;
 }
 
 .textoRutina {
@@ -196,6 +212,18 @@ div a img {
     padding-top: 10px;
     padding-bottom: 10px;
     text-align: justify;
+}
+
+.textoRutina a {
+    text-decoration: none;
+    color: black;
+    font-style: italic;
+    font-size: 20px;
+}
+
+.textoRutina a:hover {
+    color:black;
+    font-weight:bolder;
 }
 
 form {
@@ -287,13 +315,21 @@ form {
 .fotosProductos img {
     width:100%;
     height:100%;
+    align-content: center;
+    transition: 1s;
 }
+
+.fotosProductos img:hover {
+    width:104%;
+    height:104%;
+}
+
 
 /*seccion RUTINA*/
 .seccionRutina {
     width:100%;
-    height:50px;
-    padding:50px;
+    height:auto;
+    padding:30px;
 }
 
 .seccionRutina p {
@@ -519,12 +555,16 @@ footer div ul {
 }
 
 footer div ul li {
-    padding:3px;
+    padding:2px;
+}
+
+footer div ul li a:hover{
+    color:black;
+    font-weight:bolder;
 }
 
 
-
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 375px) {
     #navbarCelu {
         display:initial;
     }
@@ -572,7 +612,7 @@ footer div ul li {
         text-align: center;
         background-color: #F2BDC7;
         padding-top: 30px;
-        font-size: 15px;
+        font-size: 20px;
     }
     
     .producto1 {
@@ -612,9 +652,9 @@ footer div ul li {
     
     .textoManifiesto p{    
         padding-top: 10px;
-        padding-bottom: 10px;
+        padding-bottom: 5px;
         text-align: justify;  
-        font-size: 15px;
+        font-size: 12px;
     }
     
     .imgManifiesto {
@@ -658,9 +698,9 @@ footer div ul li {
     
     .textoRutina p {
         padding-top: 10px;
-        padding-bottom: 10px;
+        padding-bottom: 5px;
         text-align: justify;  
-        font-size: 15px;
+        font-size: 12px;
     }
 
     .textoRutina h2 {
@@ -697,6 +737,7 @@ footer div ul li {
                                 'newsletter' 
                                 'sociales';
         justify-content: center;
+        align-content: center;
         justify-items: center;
         align-items: center;
         background-color:lavenderblush;
@@ -718,7 +759,6 @@ footer div ul li {
     footer div ul {
         text-decoration: none;
         list-style-type: none;
-       
     }
 
     footer div ul li a {
@@ -730,6 +770,7 @@ footer div ul li {
         padding-top: 20px;
         padding-bottom: 20px;
         padding-left: 20px;
+        text-align: center;
     }
     
     .footerSocial {
@@ -745,8 +786,6 @@ footer div ul li {
         padding:3px;
     }
  
-    
-    
 
     /*seccion PRODUCTOS*/
     .seccionProductos {
@@ -796,15 +835,302 @@ footer div ul li {
         text-align: center;
 
     }
+
+    .seccionRutina {
+        padding:10px;
+        text-align: center;
+    }
+    .seccionRutina p {
+        padding:10px;
+        text-align: center;
+    }
+    .mainRutina {
+        width:100%;
+        height:1000px;
+        background-color: #F2BDC7;
+        background-image: none;
+    }
+    
+    .formRutina {
+        width: 100%;
+        height: 800px;
+        font-size: 15px;
+        justify-content: start;
+        align-content: space-between;
+        display:grid;
+        grid-template-columns: 90%;
+        grid-template-rows: 4% 4% 4% 4% 4% 4% 4% 4% 4% 4% 4% 4% 4% 4% 4% 4% 4% 4% 5% 5%;
+        grid-template-areas:'nombrer1'    
+                            'nombrer2' 
+                            'emailr1'
+                            'emailr2'   
+                            'rango1'
+                            'rango2' 
+                            'piel1'
+                            'piel2' 
+                            'momento1'
+                            'momento1' 
+                            'cuantos1'
+                            'cuantos2' 
+                            'obj1'
+                            'obj2' 
+                            'sexor1'
+                            'sexor2' 
+                            'espacioc1' 
+                            'espacioc2' 
+                            'botonesr1' 
+                            'botonesr2';
+    }
+    
+    .formContacto {
+        width: 100%;
+        height: 800px;
+        justify-content: center;
+        align-content: space-between;
+        display:grid;
+        grid-template-columns: 90%;
+        grid-template-rows: 2.5% 2.5% 2.5% 4% 2.5% 4% 2.5% 4% 2.5% 5% 1% 1% 2.5% 2.5% 10% 10% 2.5% 2.5% 2.5% 4% 4%;
+        grid-template-areas: 'completa'
+                            'completa'
+                            'nombre1'
+                            'nombre2' 
+                            'email1'
+                            'email2'   
+                            'tipo1'
+                            'tipo2' 
+                            'sexo1'
+                            'sexo2' 
+                            'espacio1'
+                            'espacio1' 
+                            'detalla1'
+                            'detalla1' 
+                            'cuadro'
+                            'cuadro' 
+                            'deseo1'
+                            'deseo2' 
+                            'espacio2'
+                            'botones1'
+                            'botones2';
+        grid-area: form;
+        font-size: 15px;
+    }
+
+
+    #mainContacto {
+        display: grid;
+        grid-template-columns: 90%;
+        grid-template-rows: 5% 90%;
+        grid-template-areas:'cont' 
+                            'form';
+        background-color: #F2BDC7;
+        width:100%;
+        height:900px;
+    }
+    
+    .imgContacto{
+        background-image:none; 
+    }
+
+    .formlegend {
+        font-size: 18px;
+        padding: 0;
+        height:50px;
+        width:100%;
+        text-align: center;
+    }
+
+    .contacto {
+        font-size: 25px;
+        padding: 5px;
+        height:30px;
+        text-align: center;
+        
+    }
+
+    /*seccion QUIENES SOMOS*/
+.quienesSomos {
+    display:grid;
+    grid-template-columns: 90%;
+    grid-template-rows: 45% 45%;
+    grid-template-areas: 'texto'
+                        'video';
+    column-gap: 50px;
+    justify-content: space-around;
+    align-content:center;
+    justify-items: center;
+    align-items: center;
+    width: 100%;
+    height:100%;
+}
+
+.textoQuienes {
+    grid-area: texto;
+}
+
+.textoQuienes h1 {
+    font-size: 25px;
+}
+
+.textoQuienes p {
+    font-size: 10px;
+}
 }
 
 
 
 
+@media screen and (min-width: 375px) and (max-width: 768px) {
+
+    #navbarCelu {
+        display:none;
+    }
+    
+    header {
+        display: grid;
+        grid-template-columns: 30% 60%;
+        grid-template-rows: 100%;
+        grid-template-areas: 'logo menu';
+        background-color:lavenderblush;
+        width:100%;
+        height: 100%;
+    }
 
 
+    div nav ul li a:hover{
+        background-color:pink;
+        color:black;
+        font-weight:bolder;
+    }
+
+    div nav ul {
+        display:flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        justify-content: center;
+        align-content: space-between;
+        align-items: center;
+        list-style-type: none;
+        width: 100%;
+        height:100%;
+        padding-top: 20px;
+        grid-area: menu;
+    }
+
+    li a {
+        text-decoration: none;
+        font-weight: 500;
+        font-size:25px;
+        color:black;
+        padding: 20px;
+    }
+
+    div a img {
+        grid-area: logo;
+        width:100%;
+        height:100%;
+    }
+
+    .textoManifiesto p {    
+        padding-top: 5px;
+        padding-bottom: 2px;
+        text-align: justify;  
+        font-size: 17px;
+    }
+
+    .textoRutina p {
+        padding-top: 5px;
+        padding-bottom: 2px;
+        text-align: justify;  
+        font-size: 17px;
+    }
+
+    .textoManifiesto h2 {
+        font-size: 25px;
+    }
+
+    .textoManifiesto a {
+        font-size: 18px;
+        text-align: center;
+    }
+
+    .textoRutina h2 {
+        font-size: 25px;
+    }
+
+    .textoRutina a {
+        font-size: 18px;
+        text-align: center;
+    }
+
+    footer div ul li a {
+        font-size: 12px;
+    }
+
+    .seccionProductos p {
+        text-align: center;
+    }
 
 
+    .seccionRutina {
+        padding: 10px;
+    }
+
+    .seccionRutina p {
+        padding-top:10px;
+        padding-bottom: 10px;
+    }
+    
+    .mainRutina {
+        width:100%;
+        height:650px;
+        background-image: url("../imagen/fondorutina.jpg");
+        background-size:cover;
+        background-repeat:no-repeat;
+    }
+    
+    .formRutina {
+        width: 100%;
+        height: 500px;
+        justify-content: start;
+        align-content: space-between;
+        display:grid;
+        grid-template-columns: 50% 35%;
+        grid-template-rows: 8% 8% 8% 8% 8% 8% 8% 8% 8% 10%;
+        grid-template-areas:'nombrer1 nombrer2' 
+                            'emailr1 emailr2'   
+                            'rango1 rango2' 
+                            'piel1 piel2' 
+                            'momento1 momento1' 
+                            'cuantos1 cuantos2' 
+                            'obj1 obj2' 
+                            'sexor1 sexor2' 
+                            'espacioc1 espacioc2' 
+                            'botonesr1 botonesr2';
+    }
+    
+    .textoQuienes p {
+        text-align: justify;
+        padding: 20px;
+        padding-top: 20px;
+        font-size: 15px;
+    }
+    
+    #mainContacto {
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 10% 90%;
+        grid-template-areas:'cont' 
+                            'form';
+        background-image: url("../imagen/contacto.jpg");
+        background-position: left;
+        background-size:cover;
+        background-repeat: no-repeat;
+        width:100%;
+        height:700px;
+    }
+    
+    
+}
 
 
 
