--- a/css/estilo.css
+++ b/css/estilo.css
@@ -139,10 +139,12 @@ div a img {
     color: black;
     font-style: italic;
     font-size: 20px;
-    padding: 0; }
+    padding: 0;
+    transition: 1s; }
   .textoManifiesto a:hover {
     color: black;
-    font-weight: bolder; }
+    font-weight: bolder;
+    font-size: 21px; }
 
 .imgManifiesto {
   grid-area: fotomani;
@@ -174,10 +176,12 @@ div a img {
     text-decoration: none;
     color: black;
     font-style: italic;
-    font-size: 20px; }
+    font-size: 20px;
+    transition: 1s; }
   .textoRutina a:hover {
     color: black;
-    font-weight: bolder; }
+    font-weight: bolder;
+    font-size: 21px; }
 
 .imgRutina {
   grid-area: fotoruti;
