--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -29,7 +29,7 @@ $bgColorSeccion: #F2BDC7;
 }
 
 p {
-    font-weight: lighter;
+    font-weight: normal;
     font-size:20px;
 }
 
@@ -533,15 +533,15 @@ footer {
 }
 
 .logoFooter {
-   grid-area: logo;
+    grid-area: logo;
 
-   img {
+    img {
     @include size (50px, 50px);
     }
 }
 
 .menuFooter {
-  grid-area: menu;
+    grid-area: menu;
 }
 
 .newsletterFooter {
